~~~~~~~~~~~~0.0.1 Revitalize 5-4-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added new ResourceBushes
    +Added CopperOreBush: Grows 1 copper ore every day!
    +Added IronOreBush: Grows 1 iron ore every 2 days!
    +Added GoldOreBush: Grows 1 gold ore every 3 days!
    +Added IridiumOreBush: Grows 1 iridium ore every 7 days!
    +Added RadioactiveOreBush: Grows 1 radioactive ore every 14 days!

~~~~~~~~~~~~0.0.1 Revitalize 5-3-2022 xx.xx P.M~~~~~~~~~~~~~~
+Finished work on Electric Furnaces
+Added in Nuclear Furnace
+Added in Magical Furnace
+Added in Radioactive Fuel
~Fixed crash where machines would fail to draw their status boxes when loading from a save.
~Updated blueprints code to be able to properly display a sillouette of the item that would be learned from the blueprints.
~Added Drawable.cs which helps to interface different kinds of Items that can be drawn.
~Fixed CustomObjects and CustomItems being drawn too high up when being held by the farmer.

~~~~~~~~~~~~0.0.1 Revitalize 5-2-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed drawing bounds on items that have offset draw positions.
~Fixed CustomObjects updating twice as fast, which wasn't intentional.
+Finished AdvancedFarmingSystem which harvests, plants, and fertilizes crops that reside in IrrigatedGardenPots!
~CustomObjects now shake when hit with a pickaxe.
~CustomObjects can now be removed with a Pickaxe and properly drop their respective item.
~CustomObjects now properly display their tooltip at a proper width in menus.
+Started Work on ElectricFurnace

~~~~~~~~~~~~0.0.1 Revitalize 4-29-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed CraftingMenu not showing up due to retooling the TextureManagers.
~Fixed IrrigatedGardenPots taking an extra enricher, when adding the attachment.
~Fixed IrrigatedGardenPots not gicing an enricher back if there were any other attachments on the pot.
~Fixed being able to put multiple of the same type of attachment on an IrrigatedGardenPot, effectively wasting the items.